<resources>
    <string name="app_name">Basic MVVM Kotlin</string>

    <!--Login-->
    <string name="login">Login</string>
    <string name="login_enter_email_address">Enter email address</string>
    <string name="login_enter_password">Enter password</string>
    <string name="login_email_password_empty">Email or password can\'t be empty</string>

    <!--Main-->
    <string name="main_number_1">Number 1</string>
    <string name="main_number_2">Number 2</string>
    <string name="main_count">Count</string>
    <string name="main_undefined">-</string>

</resources>